# bread

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.mcode/: TODO.md
config/: default.yaml  live.yaml  paper.yaml
config/strategies/: bb_mean_reversion.yaml  breakout_squeeze.yaml  claude_analyst.yaml  ema_crossover.yaml  etf_momentum.yaml  gap_fade.yaml  macd_divergence.yaml  macd_trend.yaml  risk_off_rotation.yaml  sector_rotation.yaml
deploy/: GCP.md  bread-live.service  bread-paper.service  bread.service  setup-gcp.sh  update.sh
docs/: design.md  operational-guide.md  phase6-validation-checklist.md  technology-decisions.md
docs/claude/: integration-plan.md
docs/design/: phase1-foundation.md  phase2-strategy-backtest.md  phase3-execution-paper.md  phase4-monitoring.md  phase5-dashboard.md  phase5-validation.md  phase6-go-live.md  phase6-validation.md  phase7-go-live.md  strategy-lifecycle-automation.md
scripts/: bread-launcher.sh
src/bread/: __init__.py  __main__.py  app.py  reset.py
tests/: conftest.py  factories.py
tests/fakes/: __init__.py  broker.py
tests/integration/: test_alpaca.py  test_backtest.py
tests/unit/: test_alerts.py  test_alpaca_broker.py  test_alpaca_data.py  test_app.py  test_backtest_engine.py  test_backtest_multi.py  test_bb_mean_reversion.py  test_breakout_squeeze.py  test_cache.py  test_claude_analyst.py  test_claude_client.py  test_cli.py  test_cli_backend.py  test_config.py  test_dashboard_app.py  test_dashboard_components.py  test_dashboard_data.py  test_data_feed.py  test_database.py  test_gap_fade.py  (+24 more)
(+68 files in other folders)
